--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://decrypt-ui.com/" />
+    <meta property="og:url" content="https://ui.decrypt.im/" />
     <meta
       property="og:title"
       content="Decrypt UI - Custom React UI Components"
@@ -29,7 +29,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://decrypt-ui.com/" />
+    <meta property="twitter:url" content="https://ui.decrypt.im/" />
     <meta
       property="twitter:title"
       content="Decrypt UI - Custom React UI Components"
